Update to create bigdata-core-test artifact.